tdf#148228 sw: fix Undo of tracked table deletion in Hide Changes mode

In Hide Changes mode, tables didn't reappear during
Undo of their tracked deletion, only by saving and
reloading the document.

Follow-up to commit 0c6221e1545e7b96d9df23cdc24302c28ae935b8
"tdf#148227 sw: fix Undo of tracked row deletion in Hide Changes mode".

Change-Id: Ifdc25ab4ae0be25a0c7559ee05b6af2e4f1aa8cf
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/132169
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit eda1a7aeff42c08e02295e5a8353a6d86a61a118)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/132178
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>